--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.15.0",
@@ -32,20 +33,25 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "file-loader": "^6.2.0",
+    "html-inline-css-webpack-plugin": "^1.9.0",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.0",
     "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
+    "serve": "^11.3.2",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.3.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.3.0"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config=webpack/webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve"
+    "start": "webpack serve --config=webpack/webpack.dev.js",
+    "start:prod": "npm run build && serve dist --single"
   },
   "repository": {
     "type": "git",
