--- a/.babelrc
+++ b/.babelrc
@@ -3,14 +3,12 @@
     [
       "@babel/preset-env",
       {
-        "targets": {
-          "browsers": ["> 1%", "last 2 versions"]
-        }
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "targets": "> 0.25%, not dead"
       }
     ],
     "@babel/preset-react"
   ],
-  "plugins":[
-      "@babel/plugin-proposal-class-properties"
-  ]
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
