--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.8.0",
     "firebase": "^8.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.0",
