--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-stage-2": "^7.8.3",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.0",
     "css-minimizer-webpack-plugin": "^1.1.5",
@@ -31,13 +34,16 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest-dom": "^3.4.1",
     "eslint-plugin-jsx-a11y": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-testing-library": "^3.10.1",
     "file-loader": "^6.2.0",
     "html-inline-css-webpack-plugin": "^1.9.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.0",
     "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
@@ -52,7 +58,7 @@
   },
   "scripts": {
     "build": "webpack --config=webpack/webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve --config=webpack/webpack.dev.js",
     "start:prod": "npm run build && serve dist --single"
   },
